[ADM-2798] Fix alignment

--- a/src/app/catalog/list/selected-items/selected-items.component.scss
+++ b/src/app/catalog/list/selected-items/selected-items.component.scss
@@ -13,6 +13,10 @@
   justify-content: space-between;
 }
 
+.items {
+  display: flex;
+}
+
 .item {
   display: inline-flex;
   align-items: center;
